# OSS-Contributor-engine

./: .dockerignore  .env.example  .gitignore  DEMO.md  DEPLOY.md  Dockerfile  README.md  oss_engine.db-shm  pyproject.toml  render.yaml  run.ps1
app/: main.py
app/agents/_shared/: __init__.py  file_filters.py
app/agents/explorer/: __init__.py  __main__.py  explorer.py  scanner.py  schemas.py  scorer.py
app/agents/hunter/: __init__.py  difficulty.py  health.py  queries.py  schemas.py
app/agents/investigator/: __init__.py  __main__.py  history_detective.py  investigator.py  issue_analyst.py  repo_mapper.py  schemas.py  synthesizer.py
app/agents/patcher/: __init__.py  __main__.py  applier.py  exceptions.py  patcher.py  schemas.py
app/agents/pitch/: __init__.py  __main__.py  pitch_writer.py  schemas.py
app/agents/profiles/: __init__.py  __main__.py  manifest_parser.py  schemas.py  skill_profiler.py
app/agents/reviewer/: __init__.py  __main__.py  reviewer.py  schemas.py
app/agents/test_runner/: __init__.py  __main__.py  detector.py  runner.py  schemas.py
app/agents/triager/: __init__.py  __main__.py  schemas.py  scoring.py  triager.py
app/api/: dependencies.py  errors.py  schemas.py
app/api/routes/: admin.py  auth.py  health.py  investigations.py  matches.py  pilot.py  users.py
app/auth/: __init__.py  crypto.py  dependencies.py  oauth.py  sessions.py
app/core/: config.py  logging.py
app/db/: __init__.py  __main__.py  base.py  models.py  session.py  vector.py
app/gsoc/: __init__.py  merge.py  queries.py  scraper.py
app/gsoc/seeds/: loader.py  orgs.json
app/jobs/: __init__.py  runner.py
app/llm/: __init__.py  call.py  router.py
app/pilot/: __init__.py  __main__.py  pilot.py  pr_opener.py  pusher.py  safety.py  schemas.py
app/sandbox/: Dockerfile  __init__.py  __main__.py  container.py  exceptions.py  workspace.py
app/streaming/: __init__.py  events.py
app/telemetry/: __init__.py  rollup.py
app/tools/: embedder.py  local_embedder.py  voyage_client.py
app/tools/github/: __init__.py  __main__.py  client.py  exceptions.py  models.py  rate_limiter.py
app/workers/: __main__.py  issue_hunter.py
frontend/: api_client.py  app.py
scripts/: backfill_embeddings.py  gen_session_secret.py  hello_db.py  hello_github.py  hello_llm.py  sandbox_smoke.py  vec_counts.py
tests/: conftest.py  test_api_auth.py  test_api_health.py  test_api_investigations.py  test_api_matches.py  test_api_users.py  test_auth_crypto.py  test_auth_sessions.py  test_db_automigrate.py  test_db_models.py  test_db_session.py  test_db_vector.py  test_difficulty_agent.py  test_explorer.py  test_explorer_scanner.py  test_explorer_scorer.py  test_frontend_api_client.py  test_github_client.py  test_github_models.py  test_github_rate_limiter.py  test_gsoc_merge.py  test_gsoc_model.py  test_gsoc_queries.py  test_gsoc_scraper.py  test_gsoc_seed_loader.py  test_investigator.py  test_investigator_agents.py  test_issue_hunter.py  test_issue_hunter_gsoc.py  test_jobs_runner.py  test_llm_call.py  test_local_embedder.py  test_manifest_parser.py  test_patcher.py  test_patcher_applier.py  test_pilot_api.py  test_pilot_model.py  test_pilot_pr_api.py  test_pilot_pr_opener.py  test_pilot_push_api.py  (+17 more)
tests/fixtures/: gsoc_sample.html
web/: next.config.ts  package-lock.json  package.json
web/src/: proxy.ts
web/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx
web/src/app/(app)/: layout.tsx
web/src/app/(app)/dashboard/: page.tsx
web/src/app/(app)/direct-pilot/: page.tsx
web/src/app/(app)/investigations/: page.tsx
web/src/app/(app)/investigations/[id]/: page.tsx
web/src/app/(app)/matches/: page.tsx
web/src/app/(app)/pitches/: page.tsx
web/src/app/(app)/profile/: page.tsx
web/src/app/(app)/settings/: page.tsx
web/src/app/(marketing)/: layout.tsx  page.tsx
web/src/app/(marketing)/signin/: page.tsx
web/src/app/api/auth/logout/: route.ts
web/src/app/auth/handoff/: route.ts
web/src/components/: app-footer.tsx  app-nav.tsx  icons.tsx  marketing-footer.tsx  marketing-nav.tsx  mobile-nav.tsx  nav-links.tsx  placeholder-page.tsx  theme-toggle.tsx  user-menu.tsx
web/src/components/dashboard/: cost-card.tsx  investigations-preview-card.tsx  matches-preview-card.tsx  profile-card.tsx
web/src/components/investigations/: cost-summary.tsx  live-stream.tsx  pilot-approval-actions.tsx  pilot-diff-viewer.tsx  pilot-disabled.tsx  pilot-failed.tsx  pilot-launcher.tsx  pilot-panel.tsx  pilot-progress.tsx  pilot-rate-limited.tsx  pilot-review.tsx  pitch-drafter.tsx  report-markdown.tsx  status-badge.tsx
web/src/components/matches/: filter-bar.tsx  investigate-button.tsx  match-card.tsx  mode-toggle.tsx  score-bars.tsx
web/src/components/pilot/: direct-pilot-form.tsx
web/src/components/profile/: re-profile-button.tsx
web/src/components/settings/: delete-account-button.tsx
web/src/lib/api/: server.ts  types.ts
